--- a/OrderApi/OrderApi.csproj
+++ b/OrderApi/OrderApi.csproj
@@ -17,6 +17,8 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="FluentValidation" Version="9.3.0" />
+    <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
@@ -25,6 +27,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OrderApi.Data\OrderApi.Data.csproj" />
+    <ProjectReference Include="..\OrderApi.Service\OrderApi.Service.csproj" />
   </ItemGroup>
 
 
