--- a/OrderApi.Messaging.Receive/OrderApi.Messaging.Receive.csproj
+++ b/OrderApi.Messaging.Receive/OrderApi.Messaging.Receive.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
+  </ItemGroup>
+
 </Project>
