--- a/OrderApi/OrderApi.csproj
+++ b/OrderApi/OrderApi.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OrderApi.Data\OrderApi.Data.csproj" />
+    <ProjectReference Include="..\OrderApi.Messaging.Receive\OrderApi.Messaging.Receive.csproj" />
     <ProjectReference Include="..\OrderApi.Service\OrderApi.Service.csproj" />
   </ItemGroup>
 
