--- a/OrderApi/appsettings.json
+++ b/OrderApi/appsettings.json
@@ -1,10 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*",
+    "RabbitMq": {
+        "Hostname": "rabbitmq",
+        "QueueName": "CustomerQueue",
+        "UserName": "user",
+        "Password": "password",
+        "Enabled": true
     }
-  },
-  "AllowedHosts": "*"
 }
