Added Sql server db instead of in-memory db

--- a/OrderApi/appsettings.json
+++ b/OrderApi/appsettings.json
@@ -13,5 +13,8 @@
         "UserName": "user",
         "Password": "password",
         "Enabled": true
+    },
+    "Database": {
+        "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=OrderApi;Trusted_Connection=True;"
     }
 }
